<resources>
    <string name="app_name">银企对账通</string>
    <string name="action_settings">Settings</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本应用是基于百度云推送的一款轻量级聊天工具，包含多个开源项目库，同时本代码也已经开源，欢迎访问我的博客主页：%1$s，由于时间仓促，错误与疏忽之处在所难免，希望各位朋友们以邮件的形式反馈问题给我，再次表示感谢！</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="timeout_try_again">网络连接超时，请重试</string>
    <string name="null_account_prompt">请输入帐号号</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="request_failed">登录失败:</string>
    <string name="worry_input">账号或密码错误，请重新输入</string>
    <string name="login_alias">请输入别名</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_btn_text">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="category_communication">家校互联</string>
    <string name="category_share">家校分享</string>
    <string name="category_collet">我的收藏</string>
    <string name="category_school">校方主页</string>
    <string name="category_progress">学习情况</string>
    <string name="category_curriculum">课程表</string>
    <string name="category_add_school">添加学校</string>
    <string name="category_school_introduce">学校介绍</string>
    <string name="school_intro"> 大学之道，在明明德，在亲民，在止于至善。知止而后有定，定而后能静，静而后能安，安而后能虑，虑而后能得。物有本末，事有终始。知所先后，则近道矣。\n  古之欲明明德于天下者，先治其国。欲治其国者，先齐其家。欲齐其家者，先修其身。欲修其身者，先正其心。欲正其心者，先诚其意。欲诚其意者，先致其知。致知在格物。物格而后知至，知至而后意诚，意诚而后心正，心正而后身修，身修而后家齐，家齐而后国治，国治而后天下平。自天子以至于庶人，壹是皆以修身为本，其本乱而末治者否矣。其所厚者薄，而其所薄者厚，未之有也。此谓知本，此谓知之至也。</string>
    <string name="school_key_alert">输入校区激活码</string>
    <string name="school_add_btn">添加</string>
    <string name="school_qr_scan_btn">二维码扫描添加</string>
    <string name="register_tip">提示 :以上均为必选项!</string>
    <string name="add_school_tip">提示 :添加辅导学校，可任选下列一种方式!</string>
    <string name="add_school_input_tip">提示 :为确保您能及时收到准确信息，请务必选择正确的校名和校区!</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="left_title_name">好友列表</string>
    <string name="center_title_name">最近会话</string>
    <string name="right_title_name">设置</string>
    <string name="no_chat">暂时没有新消息</string>
    <string name="versionnum">V1.2.3</string>
    <string name="searchdialog_find_contact_new">搜索</string>
    <string name="first_start_title">初始化设置</string>
    <string name="first_start_tips">昵称不能为空哦</string>
    <string name="first_start_scuess">连接服务器成功</string>
    <string name="login_scuess">登录成功</string>
    <string name="first_start_dialog_text">连接服务器...</string>
    <string name="isSingle">单身</string>
    <string name="info_info">个人资料</string>
    <string name="face_jazz_effects">表情翻页效果</string>
    <string name="set_push">消息通知</string>
    <string name="sound_and_vibrate">声音</string>
    <string name="new_msg_notify">新消息提醒</string>
    <string name="setting_display">界面</string>
    <string name="logout_account">注销登录</string>
    <string name="security_and_privacy">安全和隐私</string>
    <string name="logout_exit_account">退出当前帐号</string>
    <string name="logout_exit">退出登录</string>
    <string name="finish_regist">完成注册</string>
    <string name="pref_assistant">辅助功能</string>
    <string name="delete_friend_confirm">确定删除%1$s吗？</string>
    <string name="menu_about">关于</string>
    <string name="set_message_notify">通知栏挂机图标</string>
    <string name="set_pullrefresh_sound">刷新提示音</string>
    <string name="set_message_sound">新消息声音提醒</string>
    <string name="set_message_vibrate">新消息震动提醒</string>
    <string name="set_pusllMsgModel_Test">消息拉取测试模式</string>
    <string name="set_pullInterval">消息拉取间隔时间</string>
    <string name="set_show_head">聊天显示自己头像</string>
    <string name="unitOfIntervalTime">(单位:秒)</string>
    <string name="set_acount_info">个人资料</string>
    <string name="set_face_jazz">表情滑动效果</string>
    <string name="press_again_backrun">再按一次后台运行</string>
    <string name="app_is_run_background">家校互联  正在后台运行</string>
    <string name="user_agreement">way</string>
    <string name="official_website">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="feedback_suggest">帮助与反馈</string>
    <string name="qq_impression">手机QQ印象</string>
    <string name="version_upgrade">版本更新</string>
    <string name="feature_info">功能介绍</string>
    <string name="QQS_weibo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="all_rights_reserved">© 银企电子对账系统平台</string>
    <string name="all_rights_reserved_upvision">指北针科技有限公司&#160;&#160;版权所有\n Copyright  © 2013-2014 sxcompass Corporation All Right Reserved</string>
    <string name="my_blog_url">http://blog.csdn.net/weidi1989</string>
    <string name="my_email">way.ping.li@gmail.com</string>
    <string name="rename">备注名</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="niming">匿名</string>
    <string name="gonkai">公开</string>
    <string name="exit_confirm_toast">退出后不会删除任何历史数据，下次登陆依然可以使用本账号，确定退出吗？</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="setting_about_description">弹指间，心无间！</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="user_regist_usenameOccupy_error">该用户名已被占用，尝试些其它用户名!</string>
    <string name="user_regist_usenameExist_error">您已经注册过了，请直接登录!</string>
    <string name="user_updataInfo_error">更新信息失败，\n请尝试重新更新。</string>
    <string name="search_scholl_hint">搜索全国学校(中文/拼音)</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="menuGood">社区精选</string>
    <string name="menuNews">新闻资讯</string>
    <string name="menuStudio">学习教程</string>
    <string name="menuBlog">社区博客</string>
    <string name="DetailsGood">太棒了</string>
    <string name="DetailsBed">一般般</string>
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsShare">分享</string>
    <string name="DetailsDiscuss">评论</string>
    <string name="user_center">个人中心</string>
    <string name="user_login_alert">你终于来啦，快登录吧</string>
    <string name="user_key_alert">输入你的密钥</string>
    <string name="user_bind_btn">绑定</string>
    <string name="user_qr_scan_btn">二维码扫描登陆</string>
    <string name="user_alert">请在web端登陆后，寻找你的密钥：\nhttp://my.eoe.cn/admin/profile/auth.html\n会员中心>设置>客户端密钥（如下图）</string>
    <string name="user_button_alert">登陆后，你可以享有以下功能</string>
    <string name="user_level_alert">社区勋章</string>
    <string name="user_login_another">换一种方式登录</string>
    <string name="user_logout">注销</string>
    <string name="user_title">eoe</string>
    <string name="user_cancel">取消</string>
    <string name="user_remember">记住密码</string>
    <string name="user_enter">立即登录</string>
    <string name="user_user_empty">用户名不能为空!</string>
    <string name="user_pwd_empty">密码不能为空!</string>
    <string name="user_login_prompt">请先登录</string>
    <string name="user_login_enter_key">请先输入密钥</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_alias">请输入别名</string>
    <string name="user_username">请输入用户名</string>
    <string name="user_telep">请输入联系电话</string>
    <string name="user_pwd">输入密码</string>
    <string name="user_pwd_new">输入新密码</string>
    <string name="user_pwd_conf">输入第二次新密码</string>
    <string name="user_pwd_unSame">两次密码不一致</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_login_outTime">登录超时，稍后重试!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">获取信息失败，\n请尝试重新登录。</string>
    <string name="user_update_error">更新信息失败，\n请稍后尝试。</string>
    <string name="about">关于我们</string>
    <string name="about_title">名称:eoe\n版本:1.1.0\n基于:www.eoe.cn</string>
    <string name="about_intro">[应用简介]\neoe客户端是一款专为移动开发者提供帮助的软件。依靠www.eoe.cn开发者社区，将高质量的移动开发资讯、学习教程、代码库等信息提供给移动开发者，以方便大家能更好更快的学习移动开发的相关知识，尽快成长。</string>
    <string name="about_story">[应用故事]\neoe的理念是‘让移动开发更简单’，如何让移动开发者更简单是我们不断思考和探索的，我们认为有组织、有体系的内容对开发者的学习和成长都是最有价值的，于是大家都希望有这么一款让我们零碎时间里学习到最有价值的知识，于是eoe客户端诞生了!</string>
    <string name="about_thanks">[致谢]\neoe客户端里边的内容资源都是由eoe开发者社区的忠实用户所提供的，并由eoe开发者社区开发进行组织和展示，感谢其中包括的所有人，感谢你们提供的内容，有了你们eoe会更精彩！</string>
    <string name="about_opensource">[开源]\neoe客户端代码已经完全开源，欢迎每个eoer们参与, 详情情况请关注社区相关信息, 感谢每一个参与的人和每一行代码, 尤其感谢com360, Anson Yang, jackrex, KingLaw, feicien, kris, kaxi4it, ronanhardiman,lichen228等贡献的代码.</string>
    <string name="about_tontact">联系我们：</string>
    <string name="about_sina"> \@eoe移动开发者社区</string>
    <string name="about_weixin"> eoe_cn</string>
    <string name="detail_prompt">写评论</string>
    <string name="detail_enter">发表</string>
    <string name="discuss_succeed">发表成功</string>
    <string name="discuss_fail">发表失败</string>
    <string name="query_prompt">请输入关键字</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_input_content">请输入您的反馈意见</string>
    <string name="feedback_back">返回</string>
    <string name="user_center_get_info_error">获取信息错误</string>
    <string name="user_center_my_Collect">我的收藏</string>
    <string name="user_center_my_Intro">个人简介</string>
    <string name="user_center_exit">退出功能</string>
    <string name="user_center_e_coin">e币:%s</string>
    <string name="user_center_e_reputation">e望:%s</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="no_authority">当前操作未被允许</string>
    <string name="apply">申请试听</string>
    <string name="apply_result">已经申请</string>
    <string name="Request_success">信息更新成功!</string>
    <string name="Request_fail">信息更新失败!</string>
    <string name="alter_no_data">暂无相关信息!</string>
    <string name="no_null">提交内容不能为空!</string>
    <string name="Illegal_input">请输入正确的格式!</string>
    <string name="alter_no_Operation_data">当前无可操作课程!</string>
    <string name="help_desk">校方咨询台</string>
    <string name="visionUp">系统更新</string>
    <string name="visionNONeedUp">当前已是最新版本</string>
    <string name="Course_introduction">课程介绍</string>
    <string name="Class_introduction">班级介绍</string>
    <string name="newSetPsw">新设密码</string>
    <string name="newConfirmSetPsw">确定密码</string>
    <string name="currentPsw">当前密码</string>
    <string name="input_currentPsw">输入当前密码</string>
    <string name="input_newPsw">输入新密码</string>
    <string name="input_newPsw_again">再次输入新密码</string>
    <string name="cancel">取消</string>
    <string name="exit_confirm">确定退出</string>
    <string name="tip_updatePassWordFirsrLogin">首次登陆请立即修改您的初始密码</string>
    <string name="hint_getAuthCode">输入验证码</string>
    <string name="getAuthCode">获取验证码</string>
    <string name="lable_next">下一步</string>
</resources>