<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        layout="@layout/title_layout_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coversation_bg"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_background"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <LinearLayout
                android:id="@+id/oldPsw_v"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/inf_lable_Font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currentPsw" />

                <EditText
                    android:id="@+id/oldPassword_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:ems="10"
                    android:hint="@string/input_currentPsw"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/inf_lable_Font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newSetPsw" />

                <EditText
                    android:id="@+id/newPasswordFirst_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:ems="10"
                    android:hint="@string/input_newPsw"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/inf_lable_Font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newConfirmSetPsw" />

                <EditText
                    android:id="@+id/newPasswordConfirm_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:ems="10"
                    android:hint="@string/input_newPsw_again"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textSize="@dimen/edit_textSize" />
            </LinearLayout>

            <Button
                android:id="@+id/submitBt"
                style="@style/BlueBtn"
                android:layout_width="fill_parent"
                android:layout_height="46.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="15.0dip"
                android:text="保           存" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>