<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        layout="@layout/title_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/coversation_bg"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_background"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:id="@+id/tipTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tip_updatePassWordFirsrLogin" />

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/authCode_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:ems="10"
                    android:hint="@string/hint_getAuthCode"
                    android:maxLength="12"
                    android:textSize="@dimen/edit_textSize" />

                <Button
                    android:id="@+id/getAuthCodeBt"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/getAuthCode"
                    android:textSize="@dimen/font_size_extra_small" />
            </LinearLayout>

            <Button
                android:id="@+id/submitBt"
                style="@style/BlueBtn"
                android:layout_width="fill_parent"
                android:layout_height="46.0dip"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="20dp"
                android:text="@string/lable_next" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>